--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                     </div>
                                     <div class="info-text">
                                         <p><span>Current Location:</span>
-                                            <a href="http://maps.google.com/?q=HBR Layout, Bangalore" target="_blank">HBR Layout, Bangalore</a></p>
+                                            <a href="http://maps.google.com/?q=HBR Layout, Bangalore" rel="noopener" target="_blank">HBR Layout, Bangalore</a></p>
                                     </div>
                                 </div>
                                 <!-- single info -->
