--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
     <!--====== CALL TO ACTION PART START ======-->
 
-    <section id="call-to-action" class="call-to-action pt-125 pb-130 bg_cover" style="background-image: url(static/img/bg1.jpg)">
+    <section id="call-to-action" class="call-to-action pt-125 pb-130 bg_cover">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-8 col-lg-9">
