--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="Description" content="Website belongs to Santanu Panda">
 
     <!--====== Title ======-->
     <title>Santanu Panda - Portfolio</title>
@@ -358,19 +359,19 @@
                 <div class="footer-content text-center">
                     <p class="mt-">Let's talk. You can contact me in these websites.</p>
                     <ul>
-                        <li><a href="https://www.facebook.com/talk2Shaan" target="_blank"><i
+                        <li><a href="https://www.facebook.com/talk2Shaan" rel="noopener" target="_blank"><i
                                     class="lni-facebook-filled"></i></a></li>
                         <li></li>
-                        <li><a href="https://twitter.com/shaantalk" target="_blank"><i
+                        <li><a href="https://twitter.com/shaantalk" rel="noopener" target="_blank"><i
                                     class="lni-twitter-original"></i></a></li>
                         <li></li>
-                        <li><a href="https://github.com/shaantalk" target="_blank"><i
+                        <li><a href="https://github.com/shaantalk" rel="noopener" target="_blank"><i
                                     class="lni-github-original"></i></a></li>
                         <li></li>
-                        <li><a href="https://www.linkedin.com/in/shaantalk/" target="_blank"><i
+                        <li><a href="https://www.linkedin.com/in/shaantalk/" rel="noopener" target="_blank"><i
                                     class="lni-linkedin-original"></i></a></li>
                         <li></li>
-                        <li><a href="https://wa.me/917866040088" target="_blank"><i class="lni-whatsapp"></i></a></li>
+                        <li><a href="https://wa.me/917866040088" rel="noopener" target="_blank"><i class="lni-whatsapp"></i></a></li>
                     </ul>
                 </div>
             </div>
