--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <!--====== Meta tags ======-->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="Description" content="Website belongs to Santanu Panda">
+    <meta name="description" content="Website belongs to Santanu Panda">
 
     <!--====== Title ======-->
     <title>Santanu Panda - Portfolio</title>
