--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <!-- header content right -->
                     </div>
                     <div class="col-lg-6 col-xl-5 pt-25 pb-60">
-                        <img src="static/img/SantanuImage2.jpg" class="rounded-circle" alt="Santanu Image">
+                        <img src="static/img/SantanuImage3.webp" class="rounded-circle" alt="Santanu Image">
                     </div>
                 </div>
                 <!-- row -->
