--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Website belongs to Santanu Panda">
+    <meta http-equiv="Cache-control" content="public">
 
     <!--====== Title ======-->
     <title>Santanu Panda - Portfolio</title>
