--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
 
     <!--====== Line Icons css ======-->
-    <link rel="stylesheet" href="static/css/LineIcons.css&display=swap">
+    <link rel="stylesheet" href="static/css/LineIcons.css">
 <!--     <link rel="stylesheet" href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css"> -->
 
     <!--====== Magnific Popup css ======-->
