--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
 
     <!--====== Line Icons css ======-->
-    <link rel="stylesheet" href="static/css/LineIcons.css">
-<!--     <link rel="stylesheet" href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css"> -->
+<!--     <link rel="stylesheet" href="static/css/LineIcons.css"> -->
+    <link rel="stylesheet" href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css">
 
     <!--====== Magnific Popup css ======-->
     <link rel="stylesheet" href="static/css/magnific-popup.css">
