--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 
 
     <!--====== FIREBASE ======-->
-    <script src="https://www.gstatic.com/firebasejs/6.4.0/firebase.js"></script>
-    <script src="static/js/firebase.js"></script>
+    <script async src="https://www.gstatic.com/firebasejs/6.4.0/firebase.js"></script>
+    <script async src="static/js/firebase.js"></script>
 
     <!--====== RESIZE JS ======-->
-    <script src="static/js/resize.js"></script>
+    <script defer src="static/js/resize.js"></script>
 
 
 </head>
@@ -396,7 +396,7 @@
     <script src="static/js/jquery.magnific-popup.min.js"></script>
 
     <!--====== Parallax js ======-->
-    <script src="static/js/parallax.min.js"></script>
+<!--     <script src="static/js/parallax.min.js"></script> -->
 
     <!--====== Counter Up js ======-->
     <script src="static/js/waypoints.min.js"></script>
