--- a/index.html
+++ b/index.html
@@ -386,29 +386,29 @@
 
     <!--====== jquery js ======-->
     <script src="static/js/modernizr-3.6.0.min.js"></script>
-    <script src="static/js/jquery-1.12.4.min.js"></script>
+    <script async src="static/js/jquery-1.12.4.min.js"></script>
 
     <!--====== Bootstrap js ======-->
-    <script src="static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="static/js/popper.min.js"></script>
+    <script defer src="static/bootstrap/js/bootstrap.min.js"></script>
+    <script defer src="static/js/popper.min.js"></script>
 
     <!--====== Magnific Popup js ======-->
-    <script src="static/js/jquery.magnific-popup.min.js"></script>
+    <script defer src="static/js/jquery.magnific-popup.min.js"></script>
 
     <!--====== Parallax js ======-->
 <!--     <script src="static/js/parallax.min.js"></script> -->
 
     <!--====== Counter Up js ======-->
-    <script src="static/js/waypoints.min.js"></script>
-    <script src="static/js/jquery.counterup.min.js"></script>
+    <script defer src="static/js/waypoints.min.js"></script>
+    <script defer src="static/js/jquery.counterup.min.js"></script>
 
 
     <!--====== Appear js ======-->
-    <script src="static/js/jquery.appear.min.js"></script>
+    <script defer src="static/js/jquery.appear.min.js"></script>
 
 
     <!--====== Progress Bar js ======-->
-    <script src="static/js/progressbar.js"></script>
+    <script defer src="static/js/progressbar.js"></script>
 
     <!--====== Scrolling js ======-->
     <script src="static/js/scrolling-nav.js"></script>
