--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
 
     <!--====== FIREBASE ======-->
-    <script async src="https://www.gstatic.com/firebasejs/6.4.0/firebase.js"></script>
-    <script async src="static/js/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.4.0/firebase.js"></script>
+    <script src="static/js/firebase.js"></script>
 
     <!--====== RESIZE JS ======-->
     <script defer src="static/js/resize.js"></script>
@@ -386,14 +386,14 @@
 
     <!--====== jquery js ======-->
     <script src="static/js/modernizr-3.6.0.min.js"></script>
-    <script async src="static/js/jquery-1.12.4.min.js"></script>
+    <script src="static/js/jquery-1.12.4.min.js"></script>
 
     <!--====== Bootstrap js ======-->
-    <script defer src="static/bootstrap/js/bootstrap.min.js"></script>
-    <script defer src="static/js/popper.min.js"></script>
+    <script src="static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/js/popper.min.js"></script>
 
     <!--====== Magnific Popup js ======-->
-    <script defer src="static/js/jquery.magnific-popup.min.js"></script>
+    <script src="static/js/jquery.magnific-popup.min.js"></script>
 
     <!--====== Parallax js ======-->
 <!--     <script src="static/js/parallax.min.js"></script> -->
