--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <script src="static/js/firebase.js"></script>
 
     <!--====== RESIZE JS ======-->
-    <script defer src="static/js/resize.js"></script>
+    <script src="static/js/resize.js"></script>
 
 
 </head>
@@ -399,8 +399,8 @@
 <!--     <script src="static/js/parallax.min.js"></script> -->
 
     <!--====== Counter Up js ======-->
-    <script defer src="static/js/waypoints.min.js"></script>
-    <script defer src="static/js/jquery.counterup.min.js"></script>
+    <script src="static/js/waypoints.min.js"></script>
+    <script src="static/js/jquery.counterup.min.js"></script>
 
 
     <!--====== Appear js ======-->
@@ -408,7 +408,7 @@
 
 
     <!--====== Progress Bar js ======-->
-    <script defer src="static/js/progressbar.js"></script>
+    <script src="static/js/progressbar.js"></script>
 
     <!--====== Scrolling js ======-->
     <script src="static/js/scrolling-nav.js"></script>
