--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
     <script src="static/js/jquery.magnific-popup.min.js"></script>
 
     <!--====== Parallax js ======-->
-<!--     <script src="static/js/parallax.min.js"></script> -->
+    <script src="static/js/parallax.min.js"></script>
 
     <!--====== Counter Up js ======-->
     <script src="static/js/waypoints.min.js"></script>
