--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <div class="row justify-content-center" id="projectsContainer"></div>
             <!-- row -->
             <div class="row justify-content-center pt-30 pb-30">
-                <a class="main-btn" href="https://github.com/shaantalk" target="_blank">See More...</a>
+                <a class="main-btn" href="https://github.com/shaantalk" rel="noopener" target="_blank">See More...</a>
             </div>
         </div>
         <!-- container -->
