--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                         </div>
                     </div>
                     <div class="d-sm-none">
-                        <div class="row py-2 mx-3">
+                        <div class="row py-2 my-3">
                             <div class="col">
                                 <div class="lead"><a href="http://maps.google.com/?q=sri%20lasya%20fairview%20apartment,HBR%20Layout,%20Bangalore" rel="noopener" target="_blank"><i class="mr-3 lni lni-map-marker"></i></a></div>
                             </div>
