--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                     </div>
                 </section>
                 <!-- About Me Section Starts -->
-                <section id="section4" class="col-md-12 col-sm-12 col-xs-12 text-center">
+                <section id="section4" class="col-md-12 col-sm-12 col-xs-12 text-center my-3 my-sm-0">
                     <div class="d-none d-sm-block">
                         <div class="row px-sm-3 py-2">
                             <div class="col-md-3 col-sm-3 col-xs-12 px-0 mx-sm-auto mt-2 mt-sm-0">
@@ -463,7 +463,7 @@
                         </div>
                     </div>
                     <div class="d-sm-none">
-                        <div class="row py-2 my-3">
+                        <div class="row py-2">
                             <div class="col">
                                 <div class="lead"><a href="http://maps.google.com/?q=sri%20lasya%20fairview%20apartment,HBR%20Layout,%20Bangalore" rel="noopener" target="_blank"><i class="mr-3 lni lni-map-marker"></i></a></div>
                             </div>
