--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                     </div>
                 </section>
                 <!-- About Me Section Starts -->
-                <section id="section4" class="col-md-12 col-sm-12 col-xs-12 text-center my-3 my-sm-0">
+                <section id="section4" class="col-md-12 col-sm-12 col-xs-12 text-center mt-3 mt-sm-0">
                     <div class="d-none d-sm-block">
                         <div class="row px-sm-3 py-2">
                             <div class="col-md-3 col-sm-3 col-xs-12 px-0 mx-sm-auto mt-2 mt-sm-0">
