--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 <!-- Technical Skills Section Ends -->
 
                 <!-- My Project Section Starts -->
-                <section id="section3" class="col-md-12 col-sm-12 col-xs-12">
+                <section id="section3" class="col-md-12 col-sm-12 col-xs-12 mt-3 mt-sm-0">
                     <div class="row">
                         <div class="col-md-12 col-sm-12 col-xs-12 text-center">
                             <h1>My Projects</h1>
